# star-alliance

./: .gitignore  .mcp.json  AGENTS.md  AUDIT-LESSONS-REGISTER.md  AUDIT-UPGRADE-PLAN.md  CLAUDE.md  IDEA.md  README.md  STRATEGIST-AUDIT.md  STRATEGIST-MEMBER-LEVELING.md  STRATEGIST-WORKFLOW-AUTOMATION.md  STRATEGIST-WORKFLOW-MERGE-REVIEW.md  STRATEGIST-WORKFLOWS-AIR.md  STRATEGIST-WORKFLOWS.md  Star Alliance.command  Star-Alliance.command  VERSIONS.md  __mockup_preview.html  app.css  app.js  build.py  build_dashboard.py  build_guild_log.py  conformity_check.py  dashboard-meta.json  dashboard.css  dashboard.html  dashboard.js  domains.json  gen-member-art.cjs  gen-role-icons.cjs  gen-skill-art.cjs  gen-skill-art.py  gen-weapon-art.cjs  gen-weapon-gif.cjs  gen-workflow-art.cjs  guild-dashboard.html  guild-data.js  guild-data.json  guild-log.json  (+18 more)
.claude/: .harness-version.json  launch.json  output.json  serve.cjs  settings.json  settings.local.json
.retired/: README.md
.scratch/: prove-it-wire-members.py  prove-it-wire-profiles.py
agents/: index.md  the-architect.md  the-connector.md  the-designer.md  the-developer.md  the-herald.md  the-interpreter.md  the-merchant.md  the-quartermaster.md  the-steward.md  the-strategist.md  the-translator.md
art/: _make_installer_icon.py  index.md
article-creator/: SKILL.md
audit-campaigns/: index.md
desktop/src-tauri/: Cargo.toml  index.md  tauri.conf.json
desktop/src-tauri/binaries/: index.md
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
(+1411 files in other folders)
